compiler/tests/success/safety/test_glob_var.jazz
u32 x = 0;

export fn zero() -> reg u32 {
  reg u32 r;
  r = x;
  return r;
}